# backend/src/controllers/chamado.controllers.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 import { chamadoServices } from "../services";
 import { ChamadoCreate, ChamadoReturn, ChamadoRead } from "../interfaces";
+import { Chamado } from "../entities";
 
 const create = async (req: Request, res: Response): Promise<Response> => {
     const chamado: ChamadoReturn = await chamadoServices.create(req.body);
@@ -19,4 +20,12 @@ const retrieve = async (req: Request, res: Response): Promise<Response> => {
     return res.status(200).json(chamado);
 };
 
-export default { create, read, retrieve };
+const patch = async ( req: Request, res: Response): Promise<Response> => {
+    const id: number = Number(req.params.nr_chamado);
+    const { body } = req
+    const chamado = await chamadoServices.patch(id, body)
+  
+    return res.status(200).json(chamado)
+}
+
+export default { create, read, retrieve, patch };
