# backend/src/schemas/chamado.schemas.ts
@@ -9,7 +9,7 @@ const chamadoSchema = z.object({
   nm_paciente: z.string().min(1),
   ie_sexo: z.string(),
   ie_status_chamado: z.string(),
-  medico: z.number().positive().int().optional(),
+  medico: z.number().positive().int().optional().nullable(),
 });
 
 const chamadoReturnSchema = z.object({
@@ -27,6 +27,16 @@ const chamadoCreateSchema = chamadoSchema.omit({
 });
 
 const chamadoReadSchema = chamadoReturnSchema.array();
+
+const chamadoUpdateSchema = z.object({
+  nr_chamado: z.number().positive().int(),
+  hospital: hospitalSchemas.hospitalSchema,
+  ie_tipo_chamado: z.string(),
+  nm_paciente: z.string().min(1),
+  ie_sexo: z.string(),
+  ie_status_chamado: z.string(),
+  medico: medicoSchemas.medicoSchema.optional().nullable(),
+});
 
 export default {
   chamadoSchema,
